name: Utilities
version: 0.1.0
cabal-version: -any
build-type: Simple
license: BSD4
license-file: ""
copyright:
maintainer: Oscar Finnsson
build-depends: base, template-haskell, haskell98, containers >= 0.2.0.1, HDBC >= 2.1.1
stability:
homepage: http://github.com/finnsson/Utilities
package-url:
bug-reports:
synopsis: Useful utility functions for various modules.
description: Useful utility functions for various modules.
category: Utility
author: Oscar Finnsson
tested-with: GHC -any
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Utilities.Misc, Utilities.HDBC
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
